[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsql"
version = "0.1"
# Add other metadata as needed (authors, description, etc.)

dependencies = [
    "python-fasthtml",
    "fasttag",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rsql"]